# tensor

./: CMakeLists.txt  Makefile  README.md
include/: tensor.hpp
src/: hello.cu  main.cpp  tensor.cu
tests/: tensor_test.cc
